--- a/index.html
+++ b/index.html
@@ -4,10 +4,39 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Boolando</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
-    
+
+    <header class="top-menu">
+        <nav class="menu">
+            <!-- 3 link -->
+            <div>
+                <a href="#" class="top-left-links">Donna</a>
+                <a href="#" class="top-left-links">Uomo</a>
+                <a href="#" class="top-left-links">Bambino</a>
+            </div>
+            <!-- logo -->
+            <div>
+                <img src="img/boolean-logo.png" alt="logo">
+            </div>
+            <!-- icone link -->
+            <div class="ico">
+                <i class="fa-regular fa-user"></i>
+                <i class="fa-regular fa-heart"></i>
+                <i class="fa-regular fa-cart-shopping-fast"></i>
+            </div>
+        </nav>
+    </header>
+
+    <main>
+
+    </main>
+
+    <footer>
+
+    </footer>
 </body>
 </html>
