--- a/index.html
+++ b/index.html
@@ -10,26 +10,31 @@
 </head>
 <body>
 
-    <header class="top-menu">
-        <nav class="menu">
-            <!-- 3 link -->
-            <div>
+    <header class="orange-bar">
+        
+        <div class="nav-bar">
+            <!-- 3 sezioni -->
+            <nav>
                 <a href="#" class="top-left-links">Donna</a>
                 <a href="#" class="top-left-links">Uomo</a>
                 <a href="#" class="top-left-links">Bambino</a>
-            </div>
+            </nav>
             <!-- logo -->
-            <div>
+            <div class="header-img">
                 <img src="img/boolean-logo.png" alt="logo">
             </div>
-            <!-- icone link -->
+                <!-- icone link -->
             <div class="ico">
                 <i class="fa-regular fa-user"></i>
                 <i class="fa-regular fa-heart"></i>
-                <i class="fa-regular fa-cart-shopping-fast"></i>
+                <i class="fa fa-shopping-cart" aria-hidden="true"></i>
             </div>
-        </nav>
+        </div>
+
     </header>
+
+
+
 
     <main>
 
