--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         
         <div class="nav-bar">
             <!-- 3 sezioni -->
-            <nav>
+            <nav class="categories">
                 <a href="#" class="top-left-links">Donna</a>
                 <a href="#" class="top-left-links">Uomo</a>
                 <a href="#" class="top-left-links">Bambino</a>
@@ -25,9 +25,9 @@
             </div>
                 <!-- icone link -->
             <div class="ico">
-                <i class="fa-regular fa-user"></i>
-                <i class="fa-regular fa-heart"></i>
-                <i class="fa fa-shopping-cart" aria-hidden="true"></i>
+                <a href=""><i class="fa-regular fa-user"></i></a>
+                <a href=""><i class="fa-regular fa-heart"></i></a>
+                <a href=""><i class="fa fa-shopping-cart" aria-hidden="true"></i></a>
             </div>
         </div>
 
