--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 <body>
 
     <header class="orange-bar">
-        
         <div class="nav-bar">
             <!-- 3 sezioni -->
             <nav class="categories">
@@ -30,17 +29,57 @@
                 <a href=""><i class="fa fa-shopping-cart" aria-hidden="true"></i></a>
             </div>
         </div>
-
     </header>
 
-
-
-
     <main>
+        <div class="cards-container">
+            <div class="cards">
+                <img src="img/1.webp" alt="">
+
+            </div>
+             <!--<div class="cards">
+                <img src="img/2.webp" alt="">
+
+            </div>
+            <div class="cards">
+                <img src="img/3.webp" alt="">
+
+            </div>
+            <div class="cards">
+                <img src="img/4.webp" alt="">
+
+            </div>
+            <div class="cards">
+                <img src="img/5.webp" alt="">
+
+            </div>
+            <div class="cards">
+                <img src="img/6.webp" alt="">
+
+            </div> -->
+        </div>
 
     </main>
 
-    <footer>
+    <footer class="background-footer">
+
+        <div class="footer-container">
+            <div>
+                <h4>Booleando s.r.l.</h4>
+                <a>Informazioni legali</a>
+                <a>Informazione sulla privacy</a>
+                <a>Diritto di recesso</a>
+            </div>
+
+            <div>
+                <h4>Trovaci anche su</h4>
+                <i class="fa-brands fa-square-twitter ico"></i>
+                <i class="fa-brands fa-square-facebook ico"></i>
+                <i class="fa-brands fa-square-instagram ico"></i>
+                <i class="fa-brands fa-square-pinterest ico"></i>
+                <i class="fa-brands fa-square-youtube ico"></i>
+            </div>
+        </div>
 
     </footer>
 </body>
