--- a/index.html
+++ b/index.html
@@ -10,24 +10,32 @@
 </head>
 <body>
     <header class="orange-bar ">
-        <div class="nav-bar container">
+        <nav class="nav-bar container">
             <!-- 3 sezioni -->
-            <nav class="categories">
+            <ul class="categories"> 
+                <li>
                 <a href="#" class="top-left-links">Donna</a>
+                </li>   
+                <li>
                 <a href="#" class="top-left-links">Uomo</a>
-                <a href="#" class="top-left-links">Bambino</a>
-            </nav>
+                </li>
+                <li>
+                <a href="#" class="top-left-links">Bambino</a></li>
+            </ul>
             <!-- logo -->
-            <div class="header-img">
-                <img src="img/boolean-logo.png" alt="logo">
-            </div>
+            <ul class="header-img">
+                <li><img src="img/boolean-logo.png" alt="logo"></li>
+            </ul>
                 <!-- icone link -->
-            <div class="ico">
-                <a href=""><i class="fa-regular fa-user"></i></a>
-                <a href=""><i class="fa-regular fa-heart"></i></a>
-                <a href=""><i class="fa fa-shopping-cart" aria-hidden="true"></i></a>
-            </div>
-        </div>
+            <ul class="ico">
+                <li>
+                <a href=""><i class="fa-regular fa-user"></i></a></li>
+                <li>
+                <a href=""><i class="fa-regular fa-heart"></i></a></li>
+                <li>
+                <a href=""><i class="fa fa-shopping-cart" aria-hidden="true"></i></a></li>
+            </ul>
+        </nav>
     </header>
 
     <main>
