--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
+
 <body>
-    <header class="orange-bar ">
+    <header class="orange-bar">
         <nav class="nav-bar container">
             <!-- 3 sezioni -->
             <ul class="categories"> 
@@ -24,7 +25,8 @@
             </ul>
             <!-- logo -->
             <ul class="header-img">
-                <li><img src="img/boolean-logo.png" alt="logo"></li>
+                <li>
+                <a href="#!"><img src="img/boolean-logo.png" alt="logo"></a></li>
             </ul>
                 <!-- icone link -->
             <ul class="ico">
@@ -33,21 +35,23 @@
                 <li>
                 <a href=""><i class="fa-regular fa-heart"></i></a></li>
                 <li>
-                <a href=""><i class="fa fa-shopping-cart" aria-hidden="true"></i></a></li>
+                <a href=""><i class="fa-sharp fa-solid fa-bag-shopping"></i>
+                </a></li>
             </ul>
         </nav>
     </header>
 
     <main>
         <div class="cards-container container">
-            <div class="cards">
+            <div class="card">
+                <div class="img-area">
                 <img src="img/1.webp" class="item" id="img1">
-                <div class="img-inside">
-                    <i class="fa-solid fa-heart prefe"></i>
-                    <span class="discount">-50%</span>
-                    <span class="green-tag">Sostenibilità</span>
+                <img src="img/1b.webp" class="item-hover" id="img1">
+                <i class="fa-solid fa-heart heart"></i>
+                <span class="discount">-50%</span>
+                <span class="green-tag">Sostenibilità</span>
                 </div>
-                <div>
+                <div class="content">
                     Levi's <br>
                     <h3>RELAXED FIT TEE UNISEX</h3>
                     <span class="price-red">14,99€</span>
@@ -55,39 +59,17 @@
                 </div>
             </div>
 
-             <!--<div class="cards">
-                <img src="img/2.webp" alt="">
-
-            </div>
-            <div class="cards">
-                <img src="img/3.webp" alt="">
-
-            </div>
-            <div class="cards">
-                <img src="img/4.webp" alt="">
-
-            </div>
-            <div class="cards">
-                <img src="img/5.webp" alt="">
-
-            </div>
-            <div class="cards">
-                <img src="img/6.webp" alt="">
-
-            </div> -->
 
         </div>
-
     </main>
 
     <footer class="background-footer">
-
         <div class="footer-container container">
             <div>
                 <h4>Booleando s.r.l.</h4>
-                <a>Informazioni legali</a>
-                <a>Informazione sulla privacy</a>
-                <a>Diritto di recesso</a>
+                <a href="#!">Informazioni legali</a>
+                <a href="#!">Informazione sulla privacy</a>
+                <a href="#!">Diritto di recesso</a>
             </div>
 
             <div>
@@ -99,7 +81,7 @@
                 <i class="fa-brands fa-square-youtube ico"></i>
             </div>
         </div>
-
     </footer>
+
 </body>
 </html>
