--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <header class="orange-bar">
-        <nav class="nav-bar header-container">
+        <nav class="nav-bar">
             <!-- 3 sezioni -->
             <ul class="categories"> 
                 <li>
@@ -158,23 +158,29 @@
         </div>
     </main>
 
-    <footer class="background-footer">
-        <div class="footer-container container">
-            <div>
-                <h4>Booleando s.r.l.</h4>
-                <a href="#!">Informazioni legali</a>
-                <a href="#!">Informazione sulla privacy</a>
-                <a href="#!">Diritto di recesso</a>
+    <footer>
+        <div class="footer-container">
+            <div class="col-sx">
+                <ul>
+                    <li><h4>Boolando s.r.l.</h4></li>
+                    <li>
+                    <a href="#!">Informazioni legali</a>
+                    <a href="#!">Informazione sulla privacy</a>
+                    <a href="#!">Diritto di recesso</a></li>
+                </ul>
             </div>
 
-            <div>
-                <h4>Trovaci anche su</h4>
-                <i class="fa-brands fa-square-twitter ico"></i>
-                <i class="fa-brands fa-square-facebook ico"></i>
-                <i class="fa-brands fa-square-instagram ico"></i>
-                <i class="fa-brands fa-square-pinterest ico"></i>
-                <i class="fa-brands fa-square-youtube ico"></i>
-            </div>
+            <div class="col-dx">
+                <ul>
+                    <li><h4>Trovaci anche su</h4></li>
+                    <li>
+                    <i class="fa-brands fa-square-twitter "></i>
+                    <i class="fa-brands fa-square-facebook "></i>
+                    <i class="fa-brands fa-square-instagram "></i>
+                    <i class="fa-brands fa-square-pinterest "></i>
+                    <i class="fa-brands fa-square-youtube "></i></li>
+                </div>
+                </ul>
         </div>
     </footer>
 
